--- a/templates/gem_posts/create_gems.html
+++ b/templates/gem_posts/create_gems.html
@@ -12,7 +12,7 @@
 
 <main class="add-place-page">
     <!-- Page title -->
-    <h1>Share Your Gem </h1>
+    <h1 class="detail-view-header">Share Your Gem </h1>
 
     <!-- Google place search field -->
     <div id="add-place-input-container">
@@ -45,18 +45,16 @@
             <div class="add-place-btns-container">
 
                 <!-- Submit button -->
-                <input type="submit" value="Share gem" id="place-add-save-btn" class="submit-btn">
+                <input type="submit" value="Share gem" id="place-add-save-btn" class="gem-form-btn submit-btn">
 
                 <!-- Cancel button -->
-                <a href="{% url 'home' %}" class="cancel-btn">Cancel</a>
+                <a href="{% url 'home' %}" class="gem-form-btn cancel-btn">Cancel</a>
             </div>
 
             <!-- Hidden field for photo URL -->
             <input type="hidden" id="photoUrlField" name="photo_url">
         </form>
 
-    <!-- Back button -->
-    <span id="close-btn"><i class="fa-solid fa-chevron-left"></i></span>
 </main>
 
 {% endblock content %}
