--- a/templates/base.html
+++ b/templates/base.html
@@ -45,7 +45,7 @@
 
         <!-- Loop through posts -->
         {% for post in posts %}
-        <div class="col-lg-3 col-md-6 col-sm-12 mb-3 border p-3">
+        <div class="col-lg-3 col-md-6 col-sm-12 mb-3 border p-3 post-card">
 
           <!-- Display the post -->
           <h2>{{ post.title }}</h2>
@@ -73,7 +73,7 @@
             <!-- Delete button -->
             {% if request.user == post.author %}
             <a href="{% url 'delete_gem' post.id %}" class="delete-button" title="Delete gem">
-              <i class="fas fa-eraser"></i>
+              <i class="fas fa-trash"></i>
             </a>
             {% endif %}
           </div>
@@ -115,7 +115,7 @@
               <!-- Delete button -->
               {% if request.user == post.author %}
               <a href="{% url 'delete_gem' post.id %}" class="delete-button" title="Delete gem">
-                <i class="fas fa-eraser"></i>
+                <i class="fas fa-trash"></i>
               </a>
               {% endif %}
             </div>
