--- a/static/css/style.css
+++ b/static/css/style.css
@@ -266,6 +266,24 @@ nav {
     gap: 20px;
 }
 
+.delete-form {
+        display: flex;
+        max-width: fit-content;
+        font-size: 20px;
+        gap: 15px;
+}
+
+.delete-btn, .delete-cancel-btn {
+    display: flex;
+    font-family: inherit;
+    color: #fff;
+    background-color: #273c75;
+    box-shadow: 2px 2px 2px 2px #6A5ABD;
+    border: solid 0.5px black;
+}
+
+
+
 .form-container {
     display: flex;
     justify-content: space-between;
@@ -291,7 +309,8 @@ nav {
 
 .login-form-container,
 .log-out-confirmation-page,
-.signup-form-container {
+.signup-form-container,
+.delete-container {
     background-color: #273c75;
     display: flex;
     flex-direction: column;
