--- a/templates/gem_posts/gem_detail.html
+++ b/templates/gem_posts/gem_detail.html
@@ -2,18 +2,30 @@
 {% load static %}
 
 {% block content %}
-<div class="col-lg-3 col-md-6 col-sm-12 mb-3 border p-3 post-card">
-    <!-- Post title -->
-    <h2>{{ post.title }}</h2>
-    <!-- Post content -->
-    <img src="{{ post.photo_url }}" alt="{{ post.title }}">
-    <p>Author: {{ post.author.username }}</p>
-    <p class="gem-info">{{post.content}}</p>
-    <br>
-    <p>Region: {{post.region}}</p>
+<div><h2>User Comments</h2></div>
+<div class="content-container posts-container">
+    <div class="col-lg-6 col-md-6 col-sm-12 mb-3 border p-3 post-card">
+        <!-- Post title -->
+        <h2>{{ post.title }}</h2>
+        <!-- Post content -->
+        <img src="{{ post.photo_url }}" alt="{{ post.title }}">
+        <p>Author: {{ post.author.username }}</p>
+        <p class="gem-info">{{post.content}}</p>
+        <br>
+        <p>Region: {{post.region}}</p>
 
-    <!-- Loop through comments -->
-    {% for comment in comments %}
+        <!-- Comment form -->
+        <form method="post">
+            {% csrf_token %}
+            <textarea name="content"></textarea>
+            <button type="submit">Submit Comment</button>
+        </form>
+    </div>
+
+    <!-- Comments Section -->
+    <div class="col-lg-6 col-md-6 col-sm-12 mb-3 border p-3">
+        <!-- Loop through comments -->
+        {% for comment in comments %}
         <div class="comment">
             <!-- Comment author -->
             <p>{{ comment.author.username }} Commented:</p>
@@ -21,29 +33,16 @@
             <p>{{ comment.comment }}</p>
             <!-- Edit and Delete buttons for comment author -->
             {% if user == comment.author %}
-                <a href="{% url 'edit_comment' post.id comment.id %}">Edit</a>
-                <button class="delete-comment" data-comment-id="{{ comment.id }}" data-post-id="{{ post.id }}">Delete</button>
+            <a href="{% url 'edit_comment' post.id comment.id %}">Edit</a>
+            <a href="{% url 'delete_comment' post.id comment.id %}" class="delete-comment">Delete</a>
             {% endif %}
         </div>
-</div>        
-    {% endfor %}
-
-    <!-- CSRF token for AJAX -->
-    <input type="hidden" name="csrfmiddlewaretoken" value="{{ csrf_token }}">
-
-    <!-- Comment form -->
-    <form method="post">
-        {% csrf_token %}
-        <textarea name="content"></textarea>
-        <button type="submit">Submit Comment</button>
-    </form>
-
-    <!-- CSRF token for AJAX -->
-    <input type="hidden" name="csrfmiddlewaretoken" value="{{ csrf_token }}">
-
+        {% endfor %}
+    </div>
+</div>
 {% endblock %}
 
 {% block extra_js%}
-    <!-- Extra JavaScript -->
-    <script src="{% static 'js/comment.js' %}"></script>
+<!-- Extra JavaScript -->
+<script src="{% static 'js/comment.js' %}"></script>
 {% endblock %}
