--- a/templates/gem_posts/gem_detail.html
+++ b/templates/gem_posts/gem_detail.html
@@ -32,7 +32,7 @@
     </div>
 
     <!-- Comments Section -->
-    <div class="col-lg-6 col-md-6 col-sm-12 mb-3 border p-3 comments-container">
+    <div class="col-lg-6 col-md-6 col-sm-12 mb-3 border p-3 comments-container scrollable">
         <!-- Loop through comments -->
         {% for comment in comments %}
         <div class="comment">
