add gems( try to fix photo issue)

--- a/templates/base.html
+++ b/templates/base.html
@@ -54,6 +54,7 @@
           <p>Author: {{ post.author.username }}</p>
           <p>Address: {{ post.address }}</p>
           <p>Gem Info: {{post.content}}</p>
+          <input type="hidden" id="googlePlaceIdField" value="{{ post.google_place_id }}">
 
           <!-- Check if user is authenticated -->
           {% if request.user.is_authenticated %}
@@ -94,6 +95,7 @@
             <p>Author: {{ post.author.username }}</p>
             <p>Address: {{ post.address }}</p>
             <p>Region: {{post.region}}</p>
+            <input type="hidden" id="googlePlaceIdField" value="{{ post.google_place_id }}">
             <br>
             <a href="{% url 'gem_detail' post.id %}"><span id="comment-count">{{ post.comment_set.count }}</span>
               Comments</a>
