--- a/templates/gem_posts/create_gems.html
+++ b/templates/gem_posts/create_gems.html
@@ -61,7 +61,7 @@
 
 {% block extra_js %}
 <script async defer
-    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDpfod5MHMyc6clNwLkzH6Wl4vfKvElvuw&libraries=places&callback=initAutocomplete"></script>
+    src="https://maps.googleapis.com/maps/api/js?key={{ GOOGLE_MAPS_API_KEY }}&libraries=places&callback=initAutocomplete"></script>
 <!-- Include JavaScript for add gem form -->
 <script src="{% static 'js/add-gem-form.js' %}"></script>
 
