--- a/templates/partials/js.html
+++ b/templates/partials/js.html
@@ -5,7 +5,8 @@
 
 <!-- Load Bootstrap JS library (version 5.0.1) with Popper.js -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
-<!-- Load Google Maps JavaScript API -->
+
+<link rel="icon" href="/favicon.ico" />
 
 <script src="{% static 'js/messages.js' %}"></script>
 
