--- a/templates/accounts/logout.html
+++ b/templates/accounts/logout.html
@@ -1,10 +1,6 @@
-{% load static %}
-{% include 'partials/css.html' %}
-{% include 'partials/navbar.html' %}
-{% load i18n %}
+{% extends "root.html" %}
 
 {% block content %}
-<!-- Log Out Confirmation Section -->
 <section class="logout-page">
     <div class="logout-container">
         <h2>Log Out</h2>
@@ -16,10 +12,9 @@
             <input type="hidden" name="{{ redirect_field_name}}" value="{{redirect_field_value}}" />
             {% endif %}
             <!-- Log Out Button -->
-            <button id="logout-button" type="submit" class="btn btn--alert"> {% trans 'Log Out' %}</button>
+            <button id="logout-button" type="submit" class="btn btn--alert">Log Out</button>
         </form>
         <span id="close-btn"><i class="" fa-solid fa-chevron-left></i></span>
     </div>
 </section>
-<script src="{% static 'back-btn.js' %}"></script>
 {% endblock %}
