--- a/templates/gem_posts/create_gems.html
+++ b/templates/gem_posts/create_gems.html
@@ -21,7 +21,7 @@
 
         <!-- Photo -->
         <div class="add-form-img-container">
-        </div>
+            <img id="photo" src="" alt="Place Image">
 
         <!-- Form (hidden) -->
 
@@ -31,6 +31,8 @@
             <!-- Render form fields -->
             {{ form.as_p }}
             <h2 class="detail-view-place-title" id="add-form-title">Share Your Gem</h2>
+           
+            </div>
             <p class="place-address" id="add-form-address"></p>
             <div class="add-place-btns-container">
 
