--- a/templates/gem_posts/delete_gem.html
+++ b/templates/gem_posts/delete_gem.html
@@ -16,5 +16,8 @@
         <!-- Cancel button for aborting deletion -->
         <a href="{% url 'home' %}" class="btn delete-cancel-btn">No, I want to keep my gem</a>
     </form>
+    <div class="delete-return-btn">
+        <span id="close-btn"><i class="fas fa-arrow-circle-left " title="Return to Homepage"></i></span>
+    </div>
     </div>
 {% endblock %}
