--- a/templates/base.html
+++ b/templates/base.html
@@ -144,7 +144,7 @@
   {% include 'partials/js.html' %}
   
   {% load static %}
-  <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDpfod5MHMyc6clNwLkzH6Wl4vfKvElvuw&libraries=places&callback=initmap
+  <script async defer src="https://maps.googleapis.com/maps/api/js?key={{GOOGLE_MAPS_API_KEY}}&libraries=places&callback
   "></script>
   <!-- Include JavaScript for add gem form -->
   <script src="{% static 'js/gem-details.js'%}"></script>
