--- a/templates/partials/header.html
+++ b/templates/partials/header.html
@@ -1,3 +1,4 @@
+{% if not hide_navbar_and_header %}
 {% load static %}
 
 <!-- Header -->
@@ -54,3 +55,4 @@
         </a>
     </div>
 </header>
+{% endif %}
