--- a/templates/partials/navbar.html
+++ b/templates/partials/navbar.html
@@ -1,3 +1,4 @@
+{%  if not hide_navbar_and_header %}
 <!-- Navigation bar -->
 <nav class="navbar navbar-expand-lg navbar-light bg-blue custom-navbar">
   <div class="container-fluid">
@@ -85,3 +86,4 @@
       </div>
   </div>
 </nav>
+{% endif %}
