--- a/templates/gem_posts/delete_gem.html
+++ b/templates/gem_posts/delete_gem.html
@@ -1,5 +1,8 @@
 {% extends 'base.html' %}
 
+{% block navbar %} {% endblock %}
+{% block header %} {% endblock %}
+
 {% block content %}
     <!-- Page title -->
     <div class="delete-container">
